src/test/resources/purescript_examples/failing/UnusableTypeClassMethod.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith UnusableDeclaration\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSTypeClassDeclarationImpl(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PSTypeConstructorImpl(TypeConstructor)
          PSQualifiedImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('C')
              PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSGenericIdentifierImpl(GenericIdentifier)
            PsiElement(identifier)('a')
            PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSGenericIdentifierImpl(GenericIdentifier)
            PsiElement(identifier)('b')
            PsiElement(whitespace)(' ')
        PSImpliesImpl(Implies)
          <empty list>
        PsiElement(where)('where')
        PsiElement(whitespace)('\n  -- type doesn't contain `a`, which is also required to determine an instance\n  ')
        PSTypeDeclarationImpl(TypeDeclaration)
          PSTypeAnnotationNameImpl(TypeAnnotationName)
            PsiElement(identifier)('c')
            PsiElement(whitespace)(' ')
          PsiElement(::)('::')
          PsiElement(whitespace)(' ')
          PSTypeImpl(Type)
            PSTypeAtomImpl(TypeAtom)
              PSGenericIdentifierImpl(GenericIdentifier)
                PsiElement(identifier)('b')
                PsiElement(whitespace)('\n\n')
